--- a/todo
+++ b/todo
@@ -5,14 +5,19 @@
 Añadir conexión con distintas plataformas de IoT.
 	Implementar la APi para Fiware --> nodeRed
 		Mejorar tratamiento de datos ya subidos. Necesitas establecer un buen sistema de ids
+		
+Configurar configmaps para que se puedan cambiar las variables más facilmente: direcciones IP, reglas de privacidad...
+
+Mejora de las políticas de privacidad
+	Cuando funcione, pasar todo dentro del cluster
 	
 ---- Doing:
 
 Prueba de funcionamiento de politicas de privacidad	
-	max_requests funciona bien
-	timeofday pendiente: quiero hacer que si alguna regla permite el horario, se pueda hacer
+	Para mañana: Hacer una lista de peticiones y de cambios a las reglas y realizarlas todas, a ver si funcionan bien
 		
 -----DONE:
+
 
 Mejora de las políticas de privacidad
 	Crear entorno de pruebas fuera del cluster
@@ -30,6 +35,9 @@ Mejora de las políticas de privacidad
 			Arreglar parametros opcionales, algunos no son obligatorios. Para ello, comprobar si estan definidos dentro del js		
 			Cambiar el rol de nombre del archivo a campo dentro del json
 				En vez de crear el grupo all creamos un config.json en el que vengan definidas todas las clases que hay.
+				
+		Prueba de funcionamiento de politicas de privacidad	
+			max_requests, timeofday y la clase dentro del json parecen funcionar
 				
 
 Añadir conexión con distintas plataformas de IoT.
